--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </style>
   </head>
  
-   <img src="https://media.giphy.com/media/PnzZ2QDqCZURndSLlz/giphy.gif"> 
+   <img src="https://media.giphy.com/media/QvYIp7dJlKEWXjnY6f/giphy-downsized-large.gif"> 
 
   <body>
     <div id="questions">
@@ -38,22 +38,30 @@
 
 
 
-      <h2>Licenses</h2>
+      <h2>penpen</h2>
 
       <p>ペンギンは空を飛べますか？</p>
-      <p>GNU General Public License.</p>
+      <p>ペンギンは鳥類.</p>
 
-      <p>What is the license Android kernel is released under?</p>
+      <p>ペンギンは卵を産みますか？🥚?</p>
       <p>Even though a lot of Android uses more permissive license,
       the kernel is based on Linux and thus distributed under the
       terms of the GNU General Public License version 2.</p>
 
-      <p>Name license which has a politically incorrect name and is
-      one of the shortest free software licenses whose legal text
-      consists of only one sentence.</p>
+      <p>ペンギンは泳ぎますか？.</p>
       <p>Do What The Fuck you want to Public License.</p>
 
 
 
   </body>
-</html>
+  <img src="https://media.giphy.com/media/QvYIp7dJlKEWXjnY6f/giphy-downsized-large.gif"> 
+
+
+  <audio controls>
+    <source src="/Users/amon/Movies/thih s is quiz neewew /Cartoon Metal Thunk.mp3" type="audio/ogg">
+    <source src="/Users/amon/Movies/thih s is quiz neewew /Cartoon Metal Thunk.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+  </audio>
+
+
+  </html>
