--- a/index.html
+++ b/index.html
@@ -1,19 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml">
-<!--
-     Quiz script.
-     Copyright 2013 Google Inc.
-     Written by Michal Nazarewicz <mina86@mina86.com>
-
-     This is not a Google product.
-
-     Licensed under the terms of of Creative Commons Attribution 3.0
-     Unported License which can be found at
-
-         http://creativecommons.org/licenses/by/3.0/deed.en
-
-     or in LICENSE.CC-BY-3 file.
-  -->
   <head>
     <title>amon</title>
     <meta http-equiv="content-type" content="application/xhtml+xml; charset=utf-8" />
@@ -31,6 +17,7 @@
    <img src="https://media.giphy.com/media/QvYIp7dJlKEWXjnY6f/giphy-downsized-large.gif"> 
 
   <body>
+    <button id="btn">sound </button>
     <div id="questions">
       <h1>penguin</h1>
 
@@ -54,14 +41,12 @@
 
 
   </body>
-  <img src="https://media.giphy.com/media/QvYIp7dJlKEWXjnY6f/giphy-downsized-large.gif"> 
+  <body>
+    <button id="btn">sound </button>
+  </body>
 
 
-  <audio controls>
-    <source src="/Users/amon/Movies/thih s is quiz neewew /Cartoon Metal Thunk.mp3" type="audio/ogg">
-    <source src="/Users/amon/Movies/thih s is quiz neewew /Cartoon Metal Thunk.mp3" type="audio/mpeg">
-  Your browser does not support the audio element.
-  </audio>
+
 
 
   </html>
